@@ -1,7 +1,7 @@
 /*
  * libeio implementation
  *
- * Copyright (c) 2007,2008,2009,2010,2011 Marc Alexander Lehmann <libeio@schmorp.de>
+ * Copyright (c) 2007,2008,2009,2010,2011,2012 Marc Alexander Lehmann <libeio@schmorp.de>
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without modifica-
@@ -1385,6 +1385,20 @@ eio__mtouch (eio_req *req)
 /*****************************************************************************/
 /* requests implemented outside eio_execute, because they are so large */
 
+static void
+eio__lseek (eio_req *req)
+{
+  /* this usually gets optimised away completely, or your compiler sucks, */
+  /* or the whence constants really are not 0, 1, 2 */
+  int whence = req->int2 == EIO_SEEK_SET ? SEEK_SET
+             : req->int2 == EIO_SEEK_CUR ? SEEK_CUR
+             : req->int2 == EIO_SEEK_END ? SEEK_END
+             : req->int2;
+
+  req->offs   = lseek (req->int1, req->offs, whence);
+  req->result = req->offs == (off_t)-1 ? -1 : 0;
+}
+
 /* result will always end up in tmpbuf, there is always space for adding a 0-byte */
 static int
 eio__realpath (struct tmpbuf *tmpbuf, eio_wd wd, const char *path)
@@ -2317,6 +2331,7 @@ eio_execute (etp_worker *self, eio_req *req)
       case EIO_WD_CLOSE:  req->result = 0;
                           eio_wd_close_sync (req->wd); break;
 
+      case EIO_SEEK:      eio__lseek (req); break;
       case EIO_READ:      ALLOC (req->size);
                           req->result = req->offs >= 0
                                       ? pread     (req->int1, req->ptr2, req->size, req->offs)
@@ -2570,6 +2585,11 @@ eio_req *eio_close (int fd, int pri, eio_cb cb, void *data)
 eio_req *eio_readahead (int fd, off_t offset, size_t length, int pri, eio_cb cb, void *data)
 {
   REQ (EIO_READAHEAD); req->int1 = fd; req->offs = offset; req->size = length; SEND;
+}
+
+eio_req *eio_seek (int fd, off_t offset, int whence, int pri, eio_cb cb, void *data)
+{
+  REQ (EIO_SEEK); req->int1 = fd; req->offs = offset; req->int2 = whence; SEND;
 }
 
 eio_req *eio_read (int fd, void *buf, size_t length, off_t offset, int pri, eio_cb cb, void *data)
