@@ -67,4 +67,5 @@ TODO: maybe work around 3.996gb barrier in pread/pwrite as well, maybe readahead
         - allow taking advantage of posix 2008 xxxat functions and fdopendir
           by implementing a working directory abstraction.
         - make readahead emulation behave more like actual readahead by never failing.
+        - added EIO_LSEEK (untested).
 
